tests/tooling/fixtures/native/recovery/negative/neg_rel_arg_mismatch.objc3
// Negative fixture: relational bool passed to i32 parameter.
// Expected diagnostic code(s): O3S206.
module NegativeRelationalArgTypeMismatch;

fn add(lhs: i32, rhs: i32) {
  return lhs + rhs;
}

fn main() {
  let relation = 1 < 2;
  return add(relation, 3);
}
